More changes to notebook

--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "accurate-title",
+   "execution_count": null,
+   "id": "standing-greenhouse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +46,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bored-sample",
+   "metadata": {},
+   "source": [
+    "#For Grading\n",
+    "\n",
+    "Nick Elliott\n",
+    "UID: u0682219\n",
+    "\n",
+    "Please see my ip_functions.py for implementations of my histogram function 'flat2hist' and 'thresh'.   I have a few variations which I also wrote as part of my own image processing library."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "expanded-wyoming",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "behind-modern",
+   "id": "detailed-flour",
    "metadata": {
     "scrolled": true
    },
@@ -116,9 +135,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "breeding-pressing",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "understood-decision",
+   "id": "single-greece",
    "metadata": {},
    "outputs": [
     {
@@ -192,9 +217,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "minimal-heritage",
+   "metadata": {},
+   "source": [
+    "#Analysis on Hound histogram.\n",
+    "\n",
+    "We can see that the hound has distinct shadows of a certain intensity throught the image.  However, attempts to use thresholding to isolate shapes will be difficult as the distributions bleed and blend into each other.  There are other images in our data set that will be a good juxtaposition to this.  I attempted to threshold and isolate the dog simply based on intensity and had difficulty.  I decided other images were easier to isolate specific components just by thresholding based on the histogram."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "falling-triple",
+   "id": "strategic-distance",
    "metadata": {
     "scrolled": true
    },
@@ -262,9 +297,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "sufficient-cooler",
+   "metadata": {},
+   "source": [
+    "#Chang Histogram Analysis\n",
+    "This image has the distribution squished to the lefthand side of the histogram.  This could mean there was insufficient exposure and that equalization or adaptive equalization may resolve human ability to discern shapes and components in the image.  Additionally, thresholding doesn't help much to improve human perception of whats in the image."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "biological-statistics",
+   "id": "behind-redhead",
    "metadata": {
     "scrolled": true
    },
@@ -334,9 +378,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "blocked-brazilian",
+   "metadata": {},
+   "source": [
+    "#F18 Histogram\n",
+    "This turned out to have a fairly distinct distribution to isolate using thresholding.  This is a good candidate to use for isolating the plane with thresholding, flood fill, remove small holes and then label the plane as a distinct component/object.  Additionally, equalization may be effective here in making the image more dynamic as the distribution is fairly concentrated around one intensity with a normal distribution like curve for ocean in the photo.  This makes sense as the ocean is 'noisy' and is randomly distributed around a mean color/intensity."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "processed-algorithm",
+   "id": "cathedral-mouth",
    "metadata": {},
    "outputs": [
     {
@@ -404,9 +457,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "obvious-mobile",
+   "metadata": {},
+   "source": [
+    "#X-Ray Histogram Analysis\n",
+    "We can see a few distinct distributions that can be isolated using thresholding.  This is because intensities of bone, skin/ligaments/muscles and the background are all distinct, but fairly uniform in their intensity."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "delayed-membership",
+   "id": "dependent-commission",
    "metadata": {},
    "outputs": [
     {
@@ -476,9 +538,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "requested-repository",
+   "metadata": {},
+   "source": [
+    "#Turkey Histogram\n",
+    "This image was a good image to practice thresholding, flood fill and labeling as the turkeys are fairly distinct in their intensity, but are still somewhat difficult to isolate.  This is because there are similar intensity components in the fence and boxes in the background.  I was able to label each turkey distinctly using the morphology library label function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "introductory-beverage",
+   "id": "separated-passport",
    "metadata": {},
    "outputs": [
     {
@@ -551,9 +622,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "closing-lighting",
+   "metadata": {},
+   "source": [
+    "#Thresholding, Flood Fill, Remove Small Holes and labeling\n",
+    "Here I was able to threshold for the turkeys, use flood fill and remove small holes from the interior of the turkey shapes and then distinctly label each turkey.  Though I set the hole size threshold to be very large, portions of the turkeys were still partitioned into different labels.  The different colors (even though they are similar) are distinct labels."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "talented-indianapolis",
+   "id": "registered-gospel",
    "metadata": {},
    "outputs": [
     {
@@ -651,9 +731,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "decimal-sussex",
+   "metadata": {},
+   "source": [
+    "#Iceland Thresholding, Flood Fill and Labeling\n",
+    "I was able to isolate the hair of the bathers in the iceland image and then use flood fill with a wide tolerance to remove most components in the image.  I was then able to distinctly label the hair of the bathers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "blond-satin",
+   "id": "occasional-parish",
    "metadata": {
     "scrolled": true
    },
@@ -717,9 +806,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "stopped-friendly",
+   "metadata": {},
+   "source": [
+    "The original image benefits marginally (in terms of human perception of physical structures in the image) from equalization.  However, the localized adaptive equalization reveals much more structure within the image.  Additionally, we note the stretching of the equalization tranformation.  It is like a thresholding and the thesholds are stretched out in how they are distributed.  With the adaptive equalization, each neighborhood is stretched to optimize the dynamic range in that neighborhood.  This leads to a more evenly distributed global distribution/histogram."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "boxed-audio",
+   "id": "appropriate-classic",
    "metadata": {},
    "outputs": [
     {
@@ -785,9 +882,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fitted-heaven",
+   "metadata": {},
+   "source": [
+    "#Chang Equalization parameters\n",
+    "We can see there is a sweet spot in terms of human perception for how much clipping should be used to make the image human discernable.  Too much clipping from the top of the distribution eventally creates distortions in the image which don't contribute to human perception."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "functioning-diameter",
+   "id": "protected-blake",
    "metadata": {},
    "outputs": [
     {
@@ -850,6 +956,14 @@
     "plt.title('Clip Limit: 0.2')\n",
     "plt.imshow(xray_adapteq, cmap='gray')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "surgical-exclusion",
+   "metadata": {},
+   "source": [
+    "We can also see a sweetspot here in terms of revealing structure.  0.05 clipping reveals the maximum amount of structure before becoming overly distorted."
    ]
   }
  ],
